--- a/final_paper_mcpk.tex
+++ b/final_paper_mcpk.tex
@@ -7,7 +7,8 @@
 \usepackage[left=1.5in, right=1.5in, top=1in, bottom=1in]{geometry}
 \usepackage{graphicx}
 \usepackage{url}
-%\usepackage{pgfplots}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 %\usepackage{mathtools}
 
 % Code Block Theme
@@ -29,40 +30,125 @@
 % Document
 \begin{document}
 % Title
-\title{Minecraft Parkour}
+\title{Jumping in Minecraft}
 \author{Jeffrey Hewitt\\ CSCI 004}
 \maketitle
 
 % Section 1
 \section{Introduction}
-Parkour is a diverse exercise that is usually focused on moving from one location to another in the quickest way possible. Performing tricks (freerunning) and focusing on the efficiency of maneuvering around a singular obstacle are some other prominent endeavors in the sport as well. Activities like parkour have been around for centuries at least, although mainly popularized in the last forty years through various forms of media such as television, films, and video games. While some video games have intended parkour movements and courses, being able to move in \textit{any} capacity is all that's needed to prompt users to start finding movement optimizations. Minecraft falls neatly into the latter category as players are able to create and modify structures to form brilliant courses that can be used to test the boundaries of what is possible. This paper will go on to explore how the relationship between physics, collision boxes, and input timing in a tick-based system impacts the creation and difficulty of parkour obstacles in Minecraft.
+Parkour is a diverse exercise that is mainly focused on moving from one location to another in the quickest way possible. It is also a common practice to focus on the maximizing efficiency on individual obstacles as well. Activities like parkour have been around for centuries at least, although mainly popularized in the last forty years through various forms of media such as television, films, and video games. While some video games have intended parkour movements and courses, just being able to move in \textit{any} capacity is all that's needed to prompt users to start finding movement optimizations. Minecraft falls neatly into the latter category as players are able to create and modify structures to form amazing courses that can be used to test the boundaries of what is possible. This paper will go on to explore how the physics in a tick-based system impacts the way jumping, the main action in Minecraft parkour, works.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Section 2
 \section{General Physics}
+\subsection{Tick-Based Simulation}
+Minecraft processes actions over discrete periods of time known as \textit{ticks}, at a rate of twenty ticks per second. During each tick, things like inputs, collision, gravity, friction, and drag are checked and updated. As a result of this incremental event system, the timing for user inputs must be done with less than $0.05$ seconds of error; this also creates distinct ranges — or \textit{tiers} — of jumps that are possible, instead of continuous distances.
+
+\subsection{Motion Variables}
+The player's position in the world is represented using floating-point Cartesian coordinates $(x,y,z)$, measured in ``blocks" or meters. Player motion uses a similar method with three velocity vectors $(v_x,v_y,v_z)$, where the vertical and horizontal components are evaluated independently. Rather than being stored directly, acceleration is modified by forces like drag, friction, and gravity every tick.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Section 3
 \section{Vertical Movement}
+%\subsection{Gravity and Jump Impulse}
+In Minecraft, vertical motion is affected mainly by gravity, the initial velocity applied when jumping, and drag:
+
+% \label{eq:vy constants}
+\begin{align*}
+\begin{split}
+	g &= -0.08\ \text{blocks}/\text{tick}^2 \\
+	v_{y,1} &= 0.42\ \text{blocks}/\text{tick} \\
+	d &= 0.98
+\end{split}
+\end{align*}
+
+These values are then used to calculate the player's velocity on the next tick using the following formula:
+
+% \label{eq:vy form}
+\begin{align*}
+\begin{split}
+	v_{y,t} &= (v_{y,t-1} + g) \times d \\
+	v_{y,t} &= (v_{y,t-1} - 0.08) \times 0.98
+\end{split}
+\end{align*}
+
+Using Python, a loop can be constructed to iterate this equation over time and store the velocities along the course of a jump. The vertical position ($y_n$) can then be calculated by summing these velocities as the rate is constant throughout each tick:
+
+\begin{lstlisting}[style=mycodestyle, language=Python]
+vel = 21 / 50 # 0.42
+grv = 2 / 25  # 0.08
+drg = 49 / 50 # 0.98
+vel_list = [0, vel]         # store initial velocites
+for n in range(0, 14):
+	vel = (vel - grv) * drg # calculate velocities
+	vel_list.append(vel)    # add velocities to list
+
+y = vel_list[0]       # initiate y variable
+print(y)
+for n in range(1,16):
+	y += vel_list[n]  # sum velocites
+	print(y)    	  # output postitions
+
+\end{lstlisting}
+
+%% vy plot
+%\begin{align*}
+%\begin{tikzpicture}
+%\begin{axis}[
+%	axis lines=middle,
+%	xmin=0, xmax=17, xlabel=$t$,
+%	ymin=-0.7, ymax=0.6, ylabel=$v_y$,
+%	title={Peak: $v_y\approx0.00301$ ; $t=6$}]
+%\addplot+[
+%	scatter,
+%	dashed,
+%	mark size=2pt]
+%table[meta=VY]
+%{vy.dat};
+%\end{axis}
+%\end{tikzpicture}
+%\end{align*}
+
+\begin{align*}
+\begin{tikzpicture}
+\begin{axis}[
+	clip=false,
+	axis lines=middle,
+	xmin=0, xmax=15, xlabel=$t$,
+	ymin=-2.1, ymax=1.4, ylabel=$y$]
+%	title={Peak: $y\approx1.2522$}]
+\addplot+[
+	scatter,
+	dashed,
+	mark size=2pt]
+	table[meta=Y]
+	{y.dat}
+	node[above,pos=0.45,outer sep=0.1cm]{1.2522};
+\end{axis}
+\end{tikzpicture}
+\end{align*}
+
+From this we can gather that the maximum height a Minecraft player can jump is about 1.25 blocks up from the starting position.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Section 4
 \section{Horizontal Movement and Momentum}
+test
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Section 5
-\section{Collision}
+\section{Something Else?: test jump possibility}
+test
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Section 6
-\section{Jumps?}
-
-% Section 7
-\section{Math}
-
-% Section 8
-\section{Python}
-
-% Section 9
-\section{Design?}
-
-% Section 10
 \section{Conclusion}
+test
 
 % End of document
 \end{document}
